# ddn-awm-codespaces

./: README.md  ddn-cli-snippets.txt  setup.sh
.devcontainer/: devcontainer.json
awm-elastic-poc/engine/: metadata.json
awm-elastic-poc/supergraph_globals/: compatibility-config.hml
ddn-jpmc-awm/: .env.engine  SampleElasticsearchDocument.json  docker-compose.hasura.yaml  hasura.yaml  start-ts-server.sh  supergraph.cloud.yaml  supergraph.yaml  update
ddn-jpmc-awm/.hasura/: context.yaml
ddn-jpmc-awm/aggregations/: aggregations.py  example.json  pyproject.toml
ddn-jpmc-awm/app/: .env.app  .env.cloud.app
ddn-jpmc-awm/app/connector/my_pg/: .env.local  connector.yaml  docker-compose.my_pg.yaml
ddn-jpmc-awm/app/connector/mymongo/: .env.cloud  .env.local  connector.cloud.yaml  connector.yaml  (+1 more)
ddn-jpmc-awm/app/metadata/: AccountPositionTransaction.hml  AccountsBalancesCoverageLinkedAccountParties.hml  AccountsBalancesCoverageLinkedAccountParties_1.hml  PartyAccounts.hml  PartyAccounts_1.hml  ScppPositions.hml  ScppRawAccountsPositionInstrumentTransactionsTaxlots_1.hml  elastic_connector-types.hml  elastic_connector.hml  myelastic.hml  mymongo-types.hml  mymongo.hml  myts.hml
ddn-jpmc-awm/app/myelastic/: myelastic-types.hml
ddn-jpmc-awm/app/myts/: connector.cloud.yaml  myts-types.hml
ddn-jpmc-awm/engine/: metadata.json  open_dd.json
ddn-jpmc-awm/supergraph_globals/: auth-config.hml  compatibility-config.hml
ddn-jpmc-awm/update_metadata/: example.json  metadata.json.bak  open_dd.json.bak  pyproject.toml  update_metadata.py  update_metadata_bak.py
(+23 files in other folders)
